# trace

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  design-qa.md  start.sh  优化项.md
.github/workflows/: ci.yml
assets/icons/variants/: index.html
backend/: pyproject.toml
backend/src/trace_api/: __init__.py  config.py  db.py  desktop.py  main.py  project_utils.py  schema.sql  seed.py  utils.py  web.py  workspace.py
backend/src/trace_api/llm/: __init__.py  anthropic.py  base.py  factory.py  openai_compat.py  prompts.py
backend/src/trace_api/routers/: activity.py  attachments.py  backups.py  captures.py  health.py  library.py  llm.py  notes.py  preferences.py  projects.py  reports.py  search.py  threads.py  todos.py  updater.py  workbench.py  workspaces.py
backend/tests/: conftest.py  helpers.py  test_attachments.py  test_backups.py  test_captures.py  test_desktop.py  test_health.py  test_library.py  test_llm.py  test_notes.py  test_preferences.py  test_projects.py  test_release_runtime.py  test_reports.py  test_search.py  test_smoke.py  test_threads.py  test_todos.py  test_updater.py  test_workbench.py  test_workspaces.py
docs/: 00-vision.md  01-prd.md  02-data-model.md  03-architecture.md  04-release-macos.md  05-project-prd.md  06-project-ia.md  07-project-technical-design.md  08-user-guide.md  09-tauri-migration.md  10-optimization-roadmap.md  11-file-association-plan.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/lib/: api.ts  (+17 more)
scripts/: dev.sh
scripts/release/: build-mac.sh  generate_icon_assets.py
videos/trace-intro/: .gitignore  package-lock.json  package.json  tsconfig.json
(+55 files in other folders)
