[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-api"
version = "2.0.4"
description = "Trace backend — FastAPI + SQLite"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic>=2.10",
  "httpx>=0.28",
  "python-multipart>=0.0.20",
  "platformdirs>=4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]
desktop = [
  "pywebview>=5.4",
]
build = [
  "pyinstaller>=6.16",
  "pillow>=10.4",
]

[project.scripts]
trace-api = "trace_api.main:run"
trace-desktop = "trace_api.desktop:run_desktop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trace_api" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
